--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click (>=8.2.1,<9.0.0)",
+    "pandas (>=2.3.2,<3.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "flask (>=3.1.2,<4.0.0)",
+    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
 ]
 
 [tool.poetry]
