--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "flask (>=3.1.2,<4.0.0)",
     "flask-sqlalchemy (>=3.1.1,<4.0.0)",
     "build (>=1.3.0,<2.0.0)",
+    "waitress (>=3.0.2,<4.0.0)",
+    "pytest (>=8.4.2,<9.0.0)",
+    "coverage (>=7.10.6,<8.0.0)",
 ]
 
 [tool.poetry]
