--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "waitress (>=3.0.2,<4.0.0)",
     "pytest (>=8.4.2,<9.0.0)",
     "coverage (>=7.10.6,<8.0.0)",
+    "flask-wtf (>=1.2.2,<2.0.0)",
 ]
 
 [tool.poetry]
