--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,15 @@ dependencies = [
     "click (>=8.2.1,<9.0.0)",
     "pandas (>=2.3.2,<3.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
-    "flask (>=3.1.2,<4.0.0)",
     "flask-sqlalchemy (>=3.1.1,<4.0.0)",
     "build (>=1.3.0,<2.0.0)",
     "waitress (>=3.0.2,<4.0.0)",
     "pytest (>=8.4.2,<9.0.0)",
     "coverage (>=7.10.6,<8.0.0)",
     "flask-wtf (>=1.2.2,<2.0.0)",
+    "flask (>=3.1.2,<4.0.0)",
+    "xlrd (>=2.0.2,<3.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 [tool.poetry]
